--- a/frontend/css/feedpage.css
+++ b/frontend/css/feedpage.css
@@ -7,9 +7,17 @@
 body {
     width: 100%;
     height: 100vh;
+    overflow: auto;
 }
 
 /*네이게이션 바 부분*/
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
 nav .nav-wrapper{
     width: 100%;
     height: 60px;
@@ -30,10 +38,16 @@ nav .nav-wrapper .nav-contents{
 
     /*네이게이션 바 - 로고 부분*/
 nav .nav-wrapper .nav-contents .logo-section-wrapper{
-
+    width: 333.5px;
+    height: 36px;
+    position: relative;
 }
 
 nav .nav-wrapper .nav-contents .logo-section-wrapper .logo-section{
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
     display: flex;
     justify-content: start;
     align-items: center;
@@ -41,42 +55,65 @@ nav .nav-wrapper .nav-contents .logo-section-wrapper .logo-section{
 
 nav .nav-wrapper .nav-contents .logo-section-wrapper .logo-section img{
     width: 103px;
-    height: 36px;
+    height: 100%;
+    padding: 3px 0px 3px 0px;
     cursor: pointer;
 }
 
 nav .nav-wrapper .nav-contents .logo-section-wrapper .logo-section button{
-
+    padding: 8px;
+    width: 28px;
+    height: 36px;
+    background-color: #fff;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 nav .nav-wrapper .nav-contents .logo-section-wrapper .logo-section button div{
-
+    width: 12px;
+    height: 12px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 nav .nav-wrapper .nav-contents .logo-section-wrapper .logo-section button div span{
     background-color: #fff;
+    width: 12px;
+    height: 12px;
 }
 
     /*네이게이션 바 - 검색창 부분*/
 nav .nav-wrapper .nav-contents .searchbar-section-wrapper{
     justify-content: center;
     align-items: center;
+    width: 268px;
+    position: relative;
 }
 
 nav .nav-wrapper .nav-contents .searchbar-section-wrapper input{
     width: 268px;
     height: 36px;
     padding: 3px 16px 3px 16px;
-    background-color: rgba(210, 210, 210, 0.5);
+    background-color: rgb(239, 239, 239);
+    border-radius: 7px;
 }
 
 nav .nav-wrapper .nav-contents .searchbar-section-wrapper .searchbar-info-wrapper{
+    width: 236px;
+    height: 25px;
+    align-items: center;
+    padding: 0px 16px 0px 16px;
+    position: absolute;
+    left: 0;
+    top: 20%;
+}
+
+.searchbar-section-wrapper .searchbar-info-wrapper .searchbar-info{
     display: flex;
     justify-content: start;
     align-items: center;
-    width: 236px;
-    height: 25px;
-    padding: 0px 16px 0px 16px;
 }
 
 .searchbar-section-wrapper .searchbar-info-wrapper .icon-wrapper{
@@ -89,17 +126,21 @@ nav .nav-wrapper .nav-contents .searchbar-section-wrapper .searchbar-info-wrappe
     width: 16px;
     height: 16px;
     /*font-size: 15px;*/
-    color: rgb(143, 140, 140);
+    color: rgb(142, 142, 142);
 }
 
 .searchbar-section-wrapper .searchbar-info-wrapper .searchbar-text{
     font-size: 17px;
+    color: rgb(142, 142, 142);
 }
 
 
     /*네이게이션 바 - 메뉴 아이콘 부분*/
 nav .nav-wrapper .nav-contents .menu-section-wrapper{
-    
+    width: 333.5px;
+    height: 24px;
+    display: flex;
+    justify-content: right;
 }
 
 nav .nav-wrapper .nav-contents .menu-section-wrapper .menu-section{
@@ -107,7 +148,7 @@ nav .nav-wrapper .nav-contents .menu-section-wrapper .menu-section{
     height: 24px;
     padding-left: 24px;
     display: flex;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
 }
 
@@ -128,3 +169,50 @@ nav .nav-wrapper .nav-contents .menu-section-wrapper .menu-section span{
     height: 24px;
     cursor: pointer;
 }
+
+/*메인 컨텐츠 부분*/
+main {
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+    height: calc(100vh - 60px);
+    overflow: hidden;
+}
+
+main div{
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+}
+
+main div section {
+    width: 821px;
+    height: 100%;
+    margin: auto;
+    position: relative;
+    background-color: yellow;
+}
+
+/*왼쪽 컨텐츠 부분*/
+main div section .left-contents{
+    width: 470px;
+    margin-top: 10px;
+    margin-right: 32px;
+    background-color: blue;
+}
+
+/*왼쪽 상단 스토리 부분*/
+
+/*왼쪽 하단 게시글 부분*/
+
+/*우측 컨텐츠 부분*/
+main div section .right-contents{
+    width: 319px;
+    position: absolute;
+    left: 781px;
+    top: 90px;
+    margin-bottom: 30px;
+    background-color: blueviolet;
+}
+
+/*우측 상단 친구 추천 부분*/
